tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,9): error TS1029: 'export' modifier must precede 'declare' modifier.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,29): error TS2305: Module 'x' has no exported member 'c'.


==== tests/cases/compiler/importDeclWithDeclareModifier.ts (3 errors) ====
    module x {
        interface c {
        }
    }
    declare export import a = x.c;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                                ~
!!! error TS2305: Module 'x' has no exported member 'c'.
    var b: a;
    